--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset='utf-8'>
     <title>Email Typeahead</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    </style>
 </head>
 
 <body>
     <div class="wrapper">
-        <input id="email-input" type="text">
-        <ul id="email-sug-wrapper" class="email-sug"></ul>
+        <input id="email-input" type="text" oninput="addEmailList(event)" />
+        <ul id="email-sug-wrapper" class="email-sug" onclick="completeEmail(event)"></ul>
     </div>
 
     <script src='./email.js'></script>
